# pythcat

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  suscat.py
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pythcat.rst
pythcat/: Untitled1.ipynb  misscat.py  pythcat.py  repwithna.py  suscat.py  test_suscat.py  topcorr.py
tests/: test_misscat.py  test_pythcat.py  test_repwithna.py  test_suscat.py  test_topcorr.py
