[tool.poetry]
name = "pythcat"
version = "0.1.0"
description = "Python package to simplify and ease EDA process"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
pytest = "^5.3.5"
codecov = "^2.0.16"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
